# dynamodb-email-indexer

./: .env.sample  .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
examples/: benchmark.rs  create_messages.rs  package.rs  search.rs
lib/: dynamodb-email-indexer-stack.ts  dynamodb-stream-indexer-stack.ts
loadtest/: index.js
src/: attribute_helper.rs  email.rs  email_index_schema.rs  lib.rs  search_request.rs  search_response.rs
test/: dynamodb-stream-indexer.test.ts
