[package]
name = "dynamodb_email_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
tantivy = "0.17.0"
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.21" }
lambda_runtime = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
aws_lambda_events = "0.6.1"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"

[dev-dependencies]
xshell = "0.2.0"
ulid = "0.5.0"
rand = "0.8"
fake = { version = "2.4.3", features=['derive']}
structopt = { version = "0.3.26" }
aws-sigv4 = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2.6"
dotenv = "0.15.0"

[profile.release]
strip = "debuginfo"